# llm-lab

./: .gitignore  .pre-commit-config.yaml  ADOPTERS.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  SECURITY.md  THREAT_MODEL.md  项目介绍（通俗版）.md
.github/: PULL_REQUEST_TEMPLATE.md
llm_lab/: .env.example  .gitignore  Dockerfile  README.md  cli.py  db.py  docker-compose.yml  export.py  main.py  models.py  observability.py  pricing.py  promptfoo_provider.py  pyproject.toml  runner.py  settings.py  tracer.py  verifier.py  worker.py
llm_lab/.github/workflows/: test.yml
llm_lab/benchmarks/: README.md  RUN-REAL-DEEPSEEK-NOTHINK.ps1  RUN-REAL-DEEPSEEK.ps1  self_bench.py  v1-results.json  v2-results.json
llm_lab/docs/: ARCHITECTURE.md  CONTENT-CALENDAR.md  FINDING-FIRST-USER.md  MARKETING-COPY.md  MASTER-PLAN.md  NEXT-STEPS.md  OUTREACH-TEMPLATES.md  PERSONAS.md  RELEASE-v0.9.0.md  REVIEW-M3.md  ROADMAP-v0.10.0.md  outreach-tracking.csv
llm_lab/docs/adr/: 0001-sync-runner.md  0002-two-llm-paths.md  0003-sha16-hash.md  0006-audit-trail-integrity.md  0007-structured-logging.md  0008-prometheus-metrics.md  0009-cyclonedx-sbom.md  template.md
llm_lab/docs/blog-posts/: 01-governance-first.md  02-dev-to-body.md  02-stdlib-observability.md  03-dev-to-body.md  03-hash-chain-eval.md  04-wedge.md
llm_lab/docs/talks/: 2026-local-ml-meetup.md  cfp-abstract.md  meetup-list-2026.md
llm_lab/planner/: __init__.py  engine.py
llm_lab/planner/templates/: code-review.yaml  compare-ab.yaml  eval-model.yaml  summarize-paper.yaml  translation.yaml
llm_lab/templates/: compare_report.html  ui.html
llm_lab/tests/: conftest.py  e2e_local.py  helpers.py  test_api.py  test_audit_chain.py  test_auth.py  test_cli.py  test_db.py  test_e2e_smoke.py  test_export.py  test_llm_contract.py  test_observability.py  test_planner.py  test_promptfoo_provider.py  test_runner.py  test_settings.py  test_tracer.py  test_verifier.py  test_worker.py
(+4 files in other folders)
