[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-lab"
version = "0.1.0"
description = "LLM orchestration and evaluation lab"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "llm-lab contributors" },
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "promptfoo>=0.1.0",
    "deepeval>=2.0.0",
    "langfuse>=2.0.0",
    "anthropic>=0.50.0",
    "google-genai>=1.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/your-org/llm-lab"
Repository = "https://github.com/your-org/llm-lab"
Issues = "https://github.com/your-org/llm-lab/issues"

[project.scripts]
llm-lab = "llm_lab.cli:entry"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8.0",
    "mypy>=1.10",
]
xlsx = [
    "openpyxl>=3.1",
]

[tool.setuptools.packages.find]
include = ["llm_lab*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::starlette.exceptions.StarletteDeprecationWarning",
]

[tool.coverage.run]
omit = [
    "tests/e2e_local.py",
]

[tool.mypy]
ignore_missing_imports = true
python_version = "3.10"
strict_optional = true
warn_unused_ignores = true
explicit_package_bases = true

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "N", "UP", "B", "SIM", "ARG", "S", "RUF100"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ARG001", "N802", "N803", "N806", "S101"]

[tool.ruff.format]
quote-style = "double"
